removed ".screen" from css files. Fixed a bug that caused drafts to remain on deleted discussions. Implemented a ton of css fixes. Fixed date formatting.

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -2,4 +2,4 @@
 2. Navigate to that folder in your web browser.
 3. Follow the instructions on screen.
 
-Troubleshooting Help: http://gardenplatform.com/docs
+Troubleshooting Help: http://vanillaforums.org/docs
