--- a/plugins/embedvanilla/plugins/vanilla-forums/languages/vanilla-forums-ja.po
+++ b/plugins/embedvanilla/plugins/vanilla-forums/languages/vanilla-forums-ja.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Vanilla Forums 1.0.5\n"
-"PO-Revision-Date: 2011-03-30 03:24+0900\n"
+"PO-Revision-Date: 2011-04-07 02:41+0900\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Language-Team: \n"
 
 msgid "Adds deep integration for Vanilla Forums to Wordpress, including: the ability to embed the entire forum into a WordPress page; Discussion, category, and activity widgets."
-msgstr "Vanilla フォーラムを WordPress に緊密に統合します。フォーラム全体を、WordPress のページに埋め込むことができます。またスレッド、カテゴリ、アクティビティ ウィジェットも提供します。"
+msgstr "Vanilla フォーラムを WordPress に緊密に統合します。フォーラム全体を、WordPress のページに埋め込むことができます。またディスカッション、カテゴリ、アクティビティ ウィジェットも提供します。"
 
 msgid "Vanilla Forum"
 msgstr "Vanilla フォーラム"
@@ -80,7 +80,7 @@ msgid "You can make changes to your forum embed code here (optional)."
 msgstr "フォーラム埋め込み用コードをここで変更できます(オプション)。"
 
 msgid "Discussions"
-msgstr "フォーラム"
+msgstr "ディスカッション"
 
 msgid "Forum Widgets"
 msgstr "フォーラム ウィジェット"
@@ -89,34 +89,34 @@ msgid "Your Vanilla Forum provides some great widgets you can use in your WordPr
 msgstr "Vanilla フォーラムは、あなたの WordPress ブログで使えるすばらしいウィジェットをいくつか提供します:"
 
 msgid "Vanilla Discussions Widget"
-msgstr "Vanilla スレッド ウィジェット"
+msgstr "Vanilla ディスカッション ウィジェット"
 
 msgid "allows you to display recent discussions in your Vanilla Forum in your WordPress site. You define how many discussions to show, and you can even filter to specific discussion categories."
-msgstr "WordPress サイトの中に、Vanilla フォーラムの最新スレッドを表示します。表示するスレッドの数を設定したり、特定のカテゴリに限定することもできます。"
+msgstr "WordPress サイトの中に、Vanilla フォーラムの最新ディスカッションを表示します。表示するディスカッションの数を設定したり、特定のカテゴリに限定することもできます。"
 
 msgid "Vanilla Activity Widget"
 msgstr "Vanilla アクティビティ ウィジェット"
 
 msgid "allows you to display recent activity in your forum (user registrations, status updates, etc). You define how many activities to show, and you can even filter to activities from users in specific roles (administrator activity, for example)."
-msgstr "あなたのフォーラムの最近のアクティビティ (ユーザ登録、ステータスの更新等々) を表示します。表示するアクティビティの数を設定したり、特定の役割のユーザに限定することもできます (たとえば管理者のアクティビティだけとか)。"
+msgstr "あなたのフォーラムの最近のアクティビティ (ユーザー登録、ステータスの更新等々) を表示します。表示するアクティビティの数を設定したり、特定の役割のユーザーに限定することもできます (たとえば管理者のアクティビティだけとか)。"
 
 msgid "Vanilla Recently Active Users Widget"
-msgstr "Vanilla 最新アクティブ ユーザ ウィジェット"
+msgstr "Vanilla 最新アクティブ ユーザー ウィジェット"
 
 msgid "allows you to display a list of users who have been recently active on your forum. You define how many users to show."
-msgstr "あなたのフォーラムで最近アクティブだったユーザ一覧を表示します。表示するユーザの数を設定できます。"
+msgstr "あなたのフォーラムで最近アクティブだったユーザー一覧を表示します。表示するユーザーの数を設定できます。"
 
 msgid "All of these widgets are available on your <a href=\"./widgets.php\">WordPress Widget Management page</a>."
 msgstr "これらすべてのウィジェットを、<a href=\"./widgets.php\">WordPress ウィジェット管理ページ</a>で利用できます。"
 
 msgid "Vanilla Discussions"
-msgstr "Vanilla スレッド"
+msgstr "Vanilla ディスカッション"
 
 msgid "Recent discussions in your Vanilla Forum."
-msgstr "Vanilla フォーラムの最新スレッドを表示"
+msgstr "Vanilla フォーラムの最新ディスカッションを表示"
 
 msgid "Recent Discussions"
-msgstr "最新スレッド"
+msgstr "最新ディスカッション"
 
 msgid "Filter to Category:"
 msgstr "カテゴリ フィルタ:"
@@ -125,13 +125,13 @@ msgid "All Categories"
 msgstr "全カテゴリ"
 
 msgid "Number of Discussions to show:"
-msgstr "表示スレッド数:"
+msgstr "表示ディスカッション数:"
 
 msgid "Vanilla Activity"
 msgstr "Vanilla アクティビティ"
 
 msgid "Recent activity happening on your Vanilla Forum (eg. new users, status updates, etc)."
-msgstr "あなたの Vanilla フォーラムで起きた最近のアクティビティを表示 (例. ユーザ登録、ステータスの更新等)"
+msgstr "あなたの Vanilla フォーラムで起きた最近のアクティビティを表示 (例. ユーザー登録、ステータスの更新等)"
 
 msgid "Recent Forum Activity"
 msgstr "最新フォーラム アクティビティ"
@@ -140,16 +140,16 @@ msgid "Number of activities to show:"
 msgstr "アクティビティ表示数:"
 
 msgid "Vanilla Users"
-msgstr "Vanilla ユーザ"
+msgstr "Vanilla ユーザー"
 
 msgid "Icons of recently active users in your Vanilla Forum."
-msgstr "あなたの Vanilla フォーラムで最近アクティブだったユーザのアイコンを表示"
+msgstr "あなたの Vanilla フォーラムで最近アクティブだったユーザーのアイコンを表示"
 
 msgid "Recently Active Users"
-msgstr "最新アクティブ ユーザ"
+msgstr "最新アクティブ ユーザー"
 
 msgid "Number of users to show:"
-msgstr "表示ユーザ数:"
+msgstr "表示ユーザー数:"
 
 msgid "Icon width:"
 msgstr "アイコン幅:"
@@ -203,10 +203,10 @@ msgid "%1$s started a %8$s."
 msgstr "%1$s が %8$s を開始しました。"
 
 msgid "%1$s mentioned %3$s in a %8$s."
-msgstr "%1$s が %8$s の中で %3$s に返信しました。"
+msgstr "%1$s が %8$s の中で %3$s に@リプライしました。"
 
 msgid "%1$s commented on your %8$s."
-msgstr "%1$s があなたの %8$s でレスしました。"
+msgstr "%1$s があなたの %8$s にコメントしました。"
 
 msgid "You"
 msgstr "あなた"
